--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.7",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
